--- a/backend/css/style.css
+++ b/backend/css/style.css
@@ -11,6 +11,15 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 .avatar img {  height: 80px; width: 80px; }
 .info { padding-bottom:5px; padding-left:5px; vertical-align:top;}
 .social img{  height: 32px; width: 32px; }
+.stats_body {
+  background: white;
+  color: black;
+  margin: 0;
+  margin-bottom: 25px;
+  margin-top: 1em;
+}
+.menu_body { background: none repeat scroll 0 0 #FFFFFF; padding: 5px 0 17px; text-align: center;}
+.menu_body_daily { background: none repeat scroll 0 0 #FFFFFF; padding: 5px 0 17px; text-align: center;}
 html { font-size:100%; height:100%; margin-bottom:1px; }
 body { repeat fixed 0 0; color:#3a3a3a; font-family:Helvetica, Arial, sans-serif; font-size:14px; line-height:1; }
 ol, ul { list-style:none; }
@@ -144,7 +153,8 @@ p { font-size:14px; line-height:1.6em; padding:5px 0 10px; }
 /* Boxes
    ----------------------------------------------------------------------------------------------------*/
 .left_box_top { background:url('/static/images/base_main_top_710.png') no-repeat top left; height:14px; width:710px; }
-.left_box_mid { background:url('/static/images/base_main_mid_710.png') repeat-y top left!important; padding:20px; }
+.left_box_mid { background:url('/static/images/base_main_mid_710.png') repeat-y top left!important; padding: 20px; }
+.left_box_mid_no_padding { background:url('/static/images/base_main_mid_710.png') repeat-y top left!important; }
 .left_box_bot { background:url('/static/images/base_main_bot_710.png') no-repeat top left; height:14px; width:710px; }
 /* Floats and Aligns
    ----------------------------------------------------------------------------------------------------*/
