--- a/backend/templates/top_users.html
+++ b/backend/templates/top_users.html
@@ -3,18 +3,11 @@
                 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
                 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
                 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
-
-		<script type="text/javascript">
-			function fetch_details(user){
-				alert(user)
-			}
-
-		</script>
         </head>
         <body>
                 {% for u in users %}
                 <div>
-			<a href="/user/{{ u }}" onclick="fetch_details('{{ u }}')">{{ u }}</a>
+			<a href="/user/{{ u }}">{{ u }}</a>
                 </div>
                 {% endfor %}
         </body>
