--- a/backend/templates/user_info.html
+++ b/backend/templates/user_info.html
@@ -5,6 +5,15 @@
                 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
                 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
                 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+                <script type="text/javascript" src="http://www.google.com/jsapi"></script>
+                <script type="text/javascript">
+                        google.load('visualization', '1', {packages: ['imagechart']});
+                        google.load('jquery', '1.4.2');
+                </script>
+                <script type="text/javascript">
+
+                </script>
+
         </head>
         <body>
                 {% if user %}
