--- a/backend/templates/article.html
+++ b/backend/templates/article.html
@@ -1,9 +1,29 @@
 <html>
-<head>
-<script>
+        <head>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+        <script>
+        /*$(document).ready(function(){
+                var j$ = jQuery.noConflict();
+                var frames = j$('.frameToChange');
+                alert('here:');
+
+                //frames.each(function(index) {
+                       $('.frameToChange').slideDown('fast');
+                       $('.frameToChange').attr('src', $('.frameToChange').attr('link'));
+                //});
+
+                
+        });
+         */       
 	window.location.href="{{ url }}";
-</script>
-</head>
+        </script>
+        </head>
+<script type="text/javascript" src="http://platform.visibli.com/js/jquery/jquery-1.3.2.min.js"></script>
+<script type="text/javascript" src="http://platform.visibli.com/js/adanywhere.js?apikey=05e8883aeea8d420&v=1&sharedomain=instaright.appspot.com&rootdomain=visibli.com"></script>
 <body>
+        <!--p>test</p>
+        <a href="{{ url }}">{{ url }}</a>
+        <iframe class="frameToChange" link="{{ url }}" style="display: none" ></iframe-->
 </body>
 </html>
