--- a/backend/templates/feed.html
+++ b/backend/templates/feed.html
@@ -12,10 +12,14 @@
 {% for entry in entries %}
 <entry>
 	<id>{{ entry.key }}</id>
-        {% if entry.title %}
+        {% if entry.title  %}
+               <!-- {% ifequal entry.title "null" %}
+	                <title>Instaright article from domain: {{ entry.domain }} </title>
+                {% endifequal %}
+                -->
         <title>{{ entry.title|escape }}</title>
         {% else %}
-	<title>Instaright bookmark from domain: {{ entry.domain }} </title>
+	<title>Instaright article from domain: {{ entry.domain }} </title>
         {% endif %} 
 	<link href="http://instaright.appspot.com/article/{{ entry.key }}" />
 	<updated>{{ entry.date|date:"Y-m-d\TH:i:s\Z" }}</updated>
