--- a/backend/css/style.css
+++ b/backend/css/style.css
@@ -18,8 +18,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   margin-bottom: 25px;
   margin-top: 1em;
 }
-.menu_body { background: none repeat scroll 0 0 #FFFFFF; padding: 5px 0 17px; text-align: center;}
-.menu_body_daily { background: none repeat scroll 0 0 #FFFFFF; padding: 5px 0 17px; text-align: center;}
+.menu_body { background: none repeat scroll 0 0 #FFFFFF; padding: 5px 0 5px; text-align: center;}
+.menu_body_daily { background: none repeat scroll 0 0 #FFFFFF; padding: 5px 0 5px; text-align: center;}
 html { font-size:100%; height:100%; margin-bottom:1px; }
 body { repeat fixed 0 0; color:#3a3a3a; font-family:Helvetica, Arial, sans-serif; font-size:14px; line-height:1; }
 ol, ul { list-style:none; }
@@ -64,10 +64,10 @@ p.social_media {
         font-weight:bold;
         height:36px;
         line-height:2.7em;
-        margin-bottom:11px;
+        margin-bottom:5px;
         margin-left:0;
         margin-right:0;
-        margin-top:10px;
+        margin-top:5px;
         text-align:center;
         width:270px;
 }
@@ -112,6 +112,10 @@ div.social_media{
         width:270px;
 }
 .social_media img { width: 40px; height: 40px; }
+#hot_story ul { margin: 0; padding:0; }
+#hot_story ul li { margin:0; padding:0; display: inline;}
+#hot_story img { width: 15px; height: 15px; }
+#stats_twitter { background: url('/static/images/twitter_small.png') no-repeat scroll 0 0 ; }
 li img { width: 35px; height: 35px; }
 table { border-collapse:separate; border-spacing:0; }
 caption, th, td { font-weight:400; text-align:left; }
@@ -153,9 +157,10 @@ p { font-size:14px; line-height:1.6em; padding:5px 0 10px; }
 /* Boxes
    ----------------------------------------------------------------------------------------------------*/
 .left_box_top { background:url('/static/images/base_main_top_710.png') no-repeat top left; height:14px; width:710px; }
-.left_box_mid { background:url('/static/images/base_main_mid_710.png') repeat-y top left!important; padding: 20px; }
 .left_box_mid_no_padding { background:url('/static/images/base_main_mid_710.png') repeat-y top left!important; }
-.left_box_bot { background:url('/static/images/base_main_bot_710.png') no-repeat top left; height:14px; width:710px; }
+.left_box_mid { background:url('/static/images/base_main_mid_710.png') repeat-y top left!important; padding: 40px; }
+.left_box_mid_close { background:url('/static/images/base_main_bot_710.png') no-repeat top left; height:14px; width:710px; }
+.left_box_bot { width:710px; }
 /* Floats and Aligns
    ----------------------------------------------------------------------------------------------------*/
 .float_right { float:right; }
