--- a/backend/css/style.css
+++ b/backend/css/style.css
@@ -24,12 +24,13 @@ html { font-size:100%; height:100%; margin-bottom:1px; }
 body { repeat fixed 0 0; color:#3a3a3a; font-family:Helvetica, Arial, sans-serif; font-size:14px; line-height:1; }
 ol, ul { list-style:none; }
 li.signup {
-background:none repeat scroll 0 0 #F2F2F2;
+           background:none repeat scroll 0 0 #F2F2F2;
 	   font-size:25px;
 	   font-weight:bold;
 	   line-height:30px;
-margin:0 0 12px;
+           margin:0 0 12px;
 }
+#disqus_thread1{ width:810px; }
 #invite_jid {
 border:1px solid #BEBEBE;
 color:#B2B2B2;
