--- a/backend/templates/article.html
+++ b/backend/templates/article.html
@@ -18,12 +18,12 @@
          */       
 	window.location.href="{{ url }}";
         </script>
+                 <!--script type="text/javascript" src="http://platform.visibli.com/js/jquery/jquery-1.3.2.min.js"></script>
+                 <script type="text/javascript" src="http://platform.visibli.com/js/adanywhere.js?apikey=a947824b599193b3&amp;v=1&amp;sharedomain=links.visibli.com&amp;rootdomain=instaright.appspot.com"></script-->
         </head>
-<script type="text/javascript" src="http://platform.visibli.com/js/jquery/jquery-1.3.2.min.js"></script>
-<script type="text/javascript" src="http://platform.visibli.com/js/adanywhere.js?apikey=05e8883aeea8d420&v=1&sharedomain=instaright.appspot.com&rootdomain=visibli.com"></script>
 <body>
-        <!--p>test</p>
+        <p>test</p>
         <a href="{{ url }}">{{ url }}</a>
-        <iframe class="frameToChange" link="{{ url }}" style="display: none" ></iframe-->
+        <!--iframe class="frameToChange" link="{{ url }}" style="display: none" ></iframe-->
 </body>
 </html>
