twit times updated

--- a/backend/templates/badges.html
+++ b/backend/templates/badges.html
@@ -1,6 +1,6 @@
 <html>
         <head>
-                <link rel="stylesheet" type="text/css" href="../css/style.css" />
+                <!--link rel="stylesheet" type="text/css" href="../css/style.css" /-->
                 <script type="text/javascript" src="/static/javascript/util.js"></script>
                 <script type="text/javascript" src="/static/javascript/chart.js"></script>
                 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
