--- a/backend/css/landing_form.css
+++ b/backend/css/landing_form.css
@@ -95,6 +95,12 @@ body{
     padding-left: 250px;
     text-align: center;
 }
+.howdy {
+    color: #003399;
+    display: block;
+    font-family: Arial,Helvetica,Verdana,sans-serif;
+    font-size: 20px;
+}
 #content #inset #inset_shimmer .slogan {
     color: #003399;
     display: block;
