--- a/backend/css/style.css
+++ b/backend/css/style.css
@@ -377,3 +377,59 @@ ng-left:680px; }
  */
 
 .response { width:625px!important; }
+
+#nav {
+background: -moz-linear-gradient(center top , #EEEEEE 0pt, #EEEEEE 100%) repeat scroll 0 0 transparent;
+border-bottom: 1px solid #2C5D80;
+font-size: 14px;
+margin: 0 auto 48px;
+position: relative;
+width: 100%;
+height: 74px;
+z-index: 2;
+}
+#nav h5 {
+float: left;
+margin: 10px 33px 0 0;
+}
+#nav .center {
+margin: 0 auto;
+width: 960px;
+}
+#nav ul.menu > li {
+float: left;
+padding: 9px 0;
+position: relative;
+}
+#nav h5 a {
+	display: block;
+	height: 50px;
+	color: #0066CC !important;
+	font-size: 17px;
+	font-weight: 700;
+	width: 500px;
+	margin: 30px 33px 0 0;
+	margin-top: 22px;
+	text-decoration: none;
+}
+#nav ul.menu {
+	/*background: url('/static/images/listDivider.png') no-repeat scroll right top transparent;*/
+	float: right;
+	height: 39px;
+	padding-bottom: 6px;
+	padding-right: 9px;
+}
+#nav ul.menu > li > a {
+	-moz-border-radius: 4px 4px 4px 4px;
+	display: inline-block;
+	padding: 6px 10px;
+	text-decoration: none;
+	margin-top: 14px;
+}
+#nav ul.menu > li > a > span {
+	color: #0066CC;
+	font-size: 17px;
+	font-weight:700;
+
+	/*text-shadow: 0 -1px #224E6D;*/
+}
